fix: image problem feat: zip upload support

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -171,10 +171,10 @@
         
         <form method="POST" action="/convert" enctype="multipart/form-data" id="uploadForm">
             <div class="upload-area" onclick="document.getElementById('file').click()">
-                <div class="upload-icon">📄</div>
-                <div class="upload-text">Click to select or drag & drop your Markdown file</div>
-                <small>Supports: .md, .markdown (max 16MB)</small>
-                <input type="file" id="file" name="file" accept=".md,.markdown,.txt">
+                <div class="upload-icon">🗂️</div>
+                <div class="upload-text">Click to select or drag & drop your Project .zip file</div>
+                <small>Supports: .zip (containing .md, images, etc.)</small>
+                <input type="file" id="file" name="file" accept=".zip">
             </div>
             
             <div class="file-info" id="fileInfo">
