--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -174,6 +174,8 @@
                 <div class="upload-icon">🗂️</div>
                 <div class="upload-text">Click to select or drag & drop your Project .zip file</div>
                 <small>Supports: .zip (containing .md, images, etc.)</small>
+                <br>
+                <small style="color: rebeccapurple;">Max size: 16MB</small>
                 <input type="file" id="file" name="file" accept=".zip">
             </div>
             
