feat: add footer

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -179,6 +179,16 @@
             color: #28a745;
             font-weight: bold;
         }
+
+        footer {
+            position: absolute;
+            bottom: 1rem;
+            left: 0;
+            right: 0;
+            text-align: center;
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 0.8rem;
+        }
     </style>
 </head>
 <body>
@@ -292,5 +302,9 @@
             convertBtn.disabled = true;
         });
     </script>
+    
+    <footer>
+        <p>&copy; 2025 Alina Chudnova. All rights reserved.</p>
+    </footer>
 </body>
 </html>
